--- a/style/estilo1.css
+++ b/style/estilo1.css
@@ -303,3 +303,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7deed', end
 .help{
   cursor: help;
 }
+
+
+.wt{
+  width: 3em;
+  height: 3em;
+}
+
+.tel{
+  width: 3em;
+  height: 3em;
+}
+
+
+
+
+
+
